samples/_failures_safe/1761260696_c76868_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d801da04.c: In function ‘main’:
./samples/SAFE/__tmp_d801da04.c:173:5: error: expected expression at end of input
  173 |     int k =
      |     ^~~
./samples/SAFE/__tmp_d801da04.c:173:5: error: expected declaration or statement at end of input
